[tool.poetry]
name = "aiocloudflare"
version = "0.1.0"
description = "A Cloudflare API wrapper for Python with asyncio support"
authors = ["Stewart Wong <siwei.wong@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stewart86/aiocloudflare"
repository = "https://github.com/stewart86/aiocloudflare"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
httpx = "^0.19.0"
respx = "^0.17.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
safety = "^1.10.3"
mypy = "^0.910"
pre-commit = "^2.13.0"
black = "^21.8b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.12.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-asyncio = "^0.15.1"

[tool.coverage.paths]
source = ["aiocloudflare", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aiocloudflare"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# ignoring typing on scripts/

[[tool.mypy.overrides]]
module = "scripts.*"
strict = false
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
